# ct-basics

./: README.md
demo1/: Makefile  main.c  test-lic.sh
demo2/: CMakeLists.txt  main.cpp
demo2-coverage-report/: coverage.html
demo2-coverage-report/_/home/dx/src/ct-basics/demo2/: index.html  main.cpp.html
demo2/cmake/: cpptest-coverage.cmake
demo3/: README.md  main.cpp
demo4/cmake/: cpptest-coverage.cmake
demo5/: CMakeLists.txt  activate.sh  main.cpp
demo5/cmake/: cpptest-coverage.cmake  cpptest-project.cmake
demo5/cmake/cpptest.templates/: cpptestscan.bat.in  cpptestscan.in
